Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjNumObjRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, Number> yoda
        Number y = yoda:useForce(66, 66)
        output "passed"
     end
end
