Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriNumObjRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, Number> yoda
        boolean y = yoda(66, 66, true)
     end
end
